bugfix on flex-wrap

--- a/src/css/form-tablet.css
+++ b/src/css/form-tablet.css
@@ -1,7 +1,6 @@
 @media screen and (min-width: 768px) {
   #filter-form {
     gap: 16px;
-    flex-wrap: nowrap;
   }
 
   .search-container {
